test/distributions/bradc/wrongDomForDist/wrongType2.good
wrongType2.chpl:5: error: associative domains not supported by this distribution
