test/distributions/bradc/wrongDomForDist/wrongType2.chpl
use DummyArithDist;

var Dist = new dmap(new MyDist());
var DArith: domain(1) dmapped(Dist);
var DAssoc: domain(int) dmapped(Dist);
